# LLVMCodeRunner

./: .clang-format  Authors  CMakeLists.txt  LICENSE  README.md  conanfile.py
AliasAnalysis/: CMakeLists.txt  Makefile  gvn.ll  gvn.noaa.ll  loop.c  loop.cpp  loop.licm-noaa.ll  loop.licm.ll  loop.ll  loop_test.cpp  main.O1-sroa-cse.ll  main.O1-sroa-noaa.ll  main.O1-sroa.ll  main.O1.ll  main.O3.ll  main.c  main.cpp  main.ll  main_test.cpp  readme.md  test-result.txt
AsmGen/: Makefile  main.c
RunnerPass/: CMakeLists.txt  Pass.cpp  no_aa.cpp
Runtime/: CMakeLists.txt  crrt.h  main.cpp  test.cpp
cmake/: Install.cmake
doc/: index.cn.md
test/: CMakeLists.txt
