add_library(RunnerPass MODULE Pass.cpp)
add_library(no_aa MODULE no_aa.cpp)
set_target_properties(RunnerPass PROPERTIES COMPILE_FLAGS "-D__GLIBCXX_USE_CXX11_ABI=0" )
set_target_properties(no_aa PROPERTIES COMPILE_FLAGS "-D__GLIBCXX_USE_CXX11_ABI=0" )
# set_target_properties(RunnerPass PROPERTIES COMPILE_FLAGS "-D__GLIBCXX_USE_CXX11_ABI=0 -fno-rtti" )